Fixing layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,7 @@ body{
     display: flex;
   }
   .topname{
-    font-size: 22px;
+    font-size: 32px;
     font-weight: 600;
     color: royalblue;
     margin-bottom: 15px;
@@ -177,7 +177,7 @@ body{
   .slogan{
     width: 80%;
     text-align: center;
-    font-size: 36px;
+    font-size: 58px;
     color: black;
     font-weight: 600;
   }
@@ -259,7 +259,7 @@ body{
   .slogan{
     width: 75%;
     text-align: center;
-    font-size: 48px;
+    font-size: 36px;
     color: black;
     font-weight: 600;
   }
